whoops, firefox does not yet support CSS color-mix()

--- a/switch.css
+++ b/switch.css
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   border-radius: 34px;
-  background-color: color-mix(in srgb, var(--col_bg) 80%, gray 20%);
+  background-color: var(--col_accent);
   -webkit-transition: .2s;
   transition: .2s;
 }
