--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-  font-family: "sitelen seli kiwen";
+  font-family: "sitelen pona";
   font-style: normal;
   font-weight: 400;
   src: url('sitelenselikiwenasuki.woff2');
@@ -25,17 +25,31 @@ body {
 }
 
 .sitelenpona {
-  grid-area: sitelenpona;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "sitelen seli kiwen";
+  font-family: "sitelen pona";
+}
+
+#style-bar {
+  position: fixed;
+  display: flex;
+  gap: 2vw;
+  width: 100%;
+  bottom: 20px;
+  height: 50px;
+  justify-content: center;
 }
 
 #clock {
-  font-size: 3em;
+  display: flex;
+  height: calc(100vh - 50px);
+  align-items: center;
+  justify-content: center;
+  padding-inline: 8vw;
+  font-size: 8vmin;
   text-align: center;
-  margin-top: 20%;
+  word-break: break-word;
 }
 
 #theme-toggle {
